--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     padding: 0;
 }
 .overlay {
-    background: rgba(0, 0, 0, 0.6);
+    background: transparent;
     width: 100%;
     height: 100%;
     display: flex;
