--- a/style.css
+++ b/style.css
@@ -195,6 +195,39 @@ body {
         text-align: center;
         padding: 20px;
     }
+     .button-container {
+        position: absolute;
+        top: 10px;
+        right: 50%;
+        transform: translateX(50%);
+        display: flex;
+        gap: 5px; /* مسافة أصغر بين الأزرار */
+    }
+
+    .menu-btn, .home-btn {
+        font-size: 0.9rem; /* تصغير حجم النص */
+        padding: 6px 15px; /* تصغير الأزرار */
+    }
+    .offer-section {
+        padding: 20px 5px; /* تصغير التباعد */
+    }
+
+    .offers {
+        flex-direction: column; /* يجعل العناصر عمودية */
+        align-items: center; /* توسيط العناصر */
+    }
+
+    .offer {
+        max-width: 200px; /* تقليل حجم العناصر */
+    }
+
+    .offer img {
+        width: 60px; /* تقليل حجم الصور */
+    }
+
+    .images-container img {
+        width: 200px; /* تصغير الصور */
+    }
 }
 @keyframes fadeIn {
     from {
